creacion bbdd y empezamos con los test